    CHANGES IN testit VERSION 0.12


    CHANGES IN testit VERSION 0.11

MAJOR CHANGES

  o The package license was changed from GPL to GPL-3 (@jayvdb #8).

    CHANGES IN testit VERSION 0.10

NEW FEATURES

  o `test_pkg()` also looks for tests under the `tests/testit/` directory. This
  makes it easier for you to run `test_pkg()` under the root directory of the
  package, and you don't need to change the working directory to `tests/`.

    CHANGES IN testit VERSION 0.9

NEW FEATURES

  o Added a new argument `silent` to has_error() (thanks, @StevenMMortimer, #6).

    CHANGES IN testit VERSION 0.8

NEW FEATURES

  o When `%==%` is used inside assert(), a message will be printed if the value
  is not TRUE, to show the values of the LHS and RHS, respectively.

    CHANGES IN testit VERSION 0.7

NEW FEATURES

  o provided an alternative way to write assertions of the form
  assert('fact', {(condition_2); (condition_2)}); see ?testit::assert for more
  information

    CHANGES IN testit VERSION 0.6

NEW FEATURES

  o  test_pkg() runs package tests with top-level environment being set to the
  namespace of the tested package (thanks, @kalibera, #3)

MAJOR CHANGES

  o all test scripts (test-*.R) are assumed to be encoded in UTF-8 if they
  contain multibyte characters

    CHANGES IN testit VERSION 0.5

NEW FEATURES

  o added an infix operator `%==%` as an alias of identical() (in RStudio, you
  can use an add-in to insert the text `%==%`)

MINOR CHANGES

  o test_pkg() will print out the filename of the R script that errored

    CHANGES IN testit VERSION 0.4

MAJOR CHANGES

  o the `fact` argument of `assert()` is optional now: all arguments of
  `assert()` can be test conditions

    CHANGES IN testit VERSION 0.3

MAJOR CHANGES

  o the test files have to be named of the form test-*.R (or test-*.r), i.e.
    they have to use the prefix test-

  o the test environment is always cleaned (all objects removed) before the
    next test is run
